# playground

./: .gitignore  AGENTS.md  ANTIGRAVITY.md  CLAUDE.md  CODEX.md  Makefile  PLAYGROUND-BUGS-FOUND.md  PLAYGROUND-REQUEST-barak-deploy.md  PRD.md  README.md  playground-requirements.md  pyproject.toml  setup.md
.antigravity/: rules.md
.claude/agents/: architect.md  code-reviewer.md  debugger.md  iac-implementer.md  integrator.md  planner.md  qa-engineer.md
.codex/: config.toml
.codex/agents/: architect.toml  iac-engineer.toml  integrator.toml  planner.toml  reviewer.toml  tester.toml
ai/architecture/: backend_contracts.md  config_design.md  diagnostic_ids.md  shared_contracts.md  system_design.md  tech_stack.md
ai/engineering/: implementation_plan.md  task_breakdown.md  team_work_plan.md
ai/handoffs/: team-a-phase1-pr.md  team-a-phase1.md
ai/product/: mvp_scope.md  requirements.md  user_stories.md
ai/qa/: test_strategy.md
ansible/: ansible.cfg  inventory.ini  site.yml
compose/: demo.yaml
config/: defaults.yaml
config/artifacts/: sources.yaml
config/commands/: check-docker.yaml  ping-network.yaml
config/labs/: barak-deploy-compose-cross-vm.yaml  barak-deploy-cross-vm.yaml  cloud-smoke.yaml  generic-infra.yaml  lab-scheduler.yaml  vbox-smoke.yaml
config/networks/: isolated.yaml  (+2 more)
docs/: architecture_decisions.md  config_design.md  developer_guide.md  engineering_principles.md  platform.md  roadmap.md  system_design.md  system_overview.md  workflow.md
tofu/: cloud_init.cfg  cpu_features_disable.xslt.tftpl  main.tf  outputs.tf  variables.tf
(+160 files in other folders)
